2010-12-16  Steve Block  <steveblock@google.com>

Reviewed by Steve Block.

        GeolocationPositionCache needs refactoring
        https://bugs.webkit.org/show_bug.cgi?id=50826

        No new tests, refactoring only.

        * page/Geolocation.cpp:
        (WebCore::Geolocation::Geolocation):
        (WebCore::Geolocation::makeCachedPositionCallbacks):
        (WebCore::Geolocation::haveSuitableCachedPosition):
        (WebCore::Geolocation::positionChangedInternal):
        * page/Geolocation.h:
        * page/GeolocationPositionCache.cpp:
        (WebCore::GeolocationPositionCache::instance):
        (WebCore::GeolocationPositionCache::GeolocationPositionCache):
        (WebCore::GeolocationPositionCache::addUser):
        (WebCore::GeolocationPositionCache::removeUser):
        (WebCore::GeolocationPositionCache::setDatabasePath):
        (WebCore::GeolocationPositionCache::setCachedPosition):
        (WebCore::GeolocationPositionCache::cachedPosition):
        (WebCore::GeolocationPositionCache::readFromDatabase):
        (WebCore::GeolocationPositionCache::writeToDatabase):
        * page/GeolocationPositionCache.h:
        (WebCore::GeolocationPositionCacheWrapper::GeolocationPositionCacheWrapper):
        (WebCore::GeolocationPositionCacheWrapper::~GeolocationPositionCacheWrapper):
        (WebCore::GeolocationPositionCacheWrapper::setCachedPosition):
        (WebCore::GeolocationPositionCacheWrapper::cachedPosition):

Canonical link: https://commits.webkit.org/64573@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74226 268f45cc-cd09-0410-ab3c-d52691b4dbfc